Update - Add fmQuanLy2 (test). - Add loading animation for fmDangNhap. - fmQuanLy2 can edit user profile.

--- a/QuanLyKhoHang/Properties/Resources.resx
+++ b/QuanLyKhoHang/Properties/Resources.resx
@@ -124,7 +124,16 @@
   <data name="icons8-lock-501" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-lock-501.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="large-modern-warehouse-theme-blur-background_1385-1615" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\large-modern-warehouse-theme-blur-background_1385-1615.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="392507-64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\392507-64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icons8-delete-26" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-delete-26.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="809537-64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\809537-64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
