--- a/QuanLyKhoHang/GiaoDien/fmKho.resx
+++ b/QuanLyKhoHang/GiaoDien/fmKho.resx
@@ -117,6 +117,86 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="bunifuCircleProgressbar1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAfQSURBVHhe7Z1NaBxlGMd7zLHH3uyxSJP0w8QkFYm33MzB
+        fCdmAyK9CD0WVMwt7Wbz1YqFgpaCEPASEEoQlJykeAp4ybfRU9FL9KA5VKj/f3xmePbt7HZ3593Zmdnn
+        Bw/ZvO/s7Mz7f9/n/Z45ZxiGYRiGYRiGYTTG68WRC92LY4OBdd4Z7ZMoo1ns7+/3HRwcDMPmYeuHh4db
+        gS1vPt7pWhx74VrP8vSfb63NbV8rTd7vLI4VuhfGLsrpjHpBog8hsRdg27AX1ezhD9+8JEYl612Z+aNn
+        Zeary3dHh+WnjCiOj487kLjjzP2wUzfRq1nxyZeRif8qu1qa/Jvi0M3JZRgQ4mKNIjyFbeC4efylcIOB
+        zT7+9A5dU2B9q7NHUQJUM5Scn9taGAhx/ujoaKWKEDuIf4D4YR4rX6uLy6WJS13F94Y6F8fm377/wU9R
+        QrgGMb/j9+QU+YeuCRX0bST0SYQIxwifZ6mRw71DgeimrpWm/okSJLD+tcJjtt7ka/kECV5Agj9zRKBt
+        Izxxd9G1ODr+5spMxZJzfWnqFCXmzmufzXbIV/IBczwSnXWAK8QxbFwOaxmsO3pX3j+IEoXGuNyUFuk/
+        lJUK/o/wW3JIamCJgTv7PUqUN5am/+oujlyRQ7MJEp8uKqy0+RnGOqKhSjoJ6J46i6O3ouqYq6WJfyma
+        HJot2IIKhBAxTlhaJDr1dK+8e75/dfZbVxQa6xU5LP0w90OATS0GbLuZLadmwsSPEuXG2tyT1Ff2IoY7
+        1LGZZhdVC3RTV5cmnruiDKzO/SiHpBMmvhaDbkuiMg8rdA5WuqL0rxYeyiHpwq0z0tiKigubvj3LM/uu
+        KD2lqY/kkHSAxL+pxchTyXBhZe82jdn6Ss04GFpPHODT41GbEpVbONZ1rTR5qkVhM7nl8y1sOUEM3elj
+        ayrTFXitcD5FC0LrXZ7+jSVIDkkeCBAOh1CYrDZtG6VnafoTVxTUMRsSnSystJUYp1nq9PmEAriiJD7E
+        gpLQoV1VHltUtcLOIZq+v2hBOKci0ckAAW6r0kFXla/h6TqJqk8Sm7NH4l+gi7LSUQ5c164WhP9LVHNx
+        OoDbEtz2cC2YFuR/a/LI8N7e3hVdOvDZltIoBtYK32tBrpcmT5o6AAkRNgIxYFY6HNi60oKc2d2RmxLt
+        F3b4dOlgaZEoQ8HFEVoQztlLlF8gQiEQA2alowJnS4+UILSmzMdDhHBonc1eCTYiQD+kfKFeccxvernu
+        ik1fiTIioABaEK6mlCg/sDUViAEzd/UK6KK0IFdK48+9Djo6fY8FCTaqMLBa+FWL4rXnDhG4oO1MEJQW
+        WyleA73LM19oQfi/RMWD9YUS4xT/t/W4Va2441us6CUqHhxWDwSBPZVg4xW49QhnFCUqHhAknC9HXfJA
+        go0acFc/eumP6ArdRnbr48baXNneRy8LISBEOH7F5q8EGzVw497c11oQbjyVqMaBENzpGghiLaw6eOfz
+        D1e1IF4GGiFEuDQULSzbVlwH3EqnBeH/EtU4ECLsg5gg9cFtDd4FgZsKFzOYIPXB/YyTj26/oH28cc9b
+        pW4lJAZB2tEkKB440U5wQhOkfoK0o0lQPHCisJXFXrsEGzWADKyHnU4kOB5aEGv21gc9SpB2sGMJjgeH
+        S4KTchhFgo0aaMo4IIdLgpNyGEWCjRpAmo0HaQfvsi7B8cCJ9Gxh7vd++ATpxcdLnaUdMrafefXd3d1L
+        wUm9VUxtAtIsXBjCjC3B8aEQwYltPVZtoELnDgG9MMRflwEnDEd8WadIsFEFiDEYpBnMTwsrgK0rdfLW
+        7BDKGBCED1o7SzM0hh5JsB90e5rui8VRoowKIK30dj//80g4cTiEAsvmA1gSwmkIcWGI/42gbLYpQcxt
+        VUG7K3z20/9wgcruciBbThoB3TnSJ5yywOchifIPfiAc17JeezR6ZIPCNLW+pdrBj9GsT1KOWzoS6SLg
+        h/QuKqtLFBBD1x3J7E5mqVCCWCkRWKdChLBnDkuuJYofs72GDnpBYeJpwlKhcwM+t/UCOvY7Wp4eTo5A
+        iW2PpwBFgfsPW5+w1kxRRPjMrUQqsZThZMzW1qm4gHBGjIaLa6vV8bhnvTOZrir+Qri44ELCWTFauwzP
+        4z75xG7tIdLTBeDFqAtjTmnecEEKgGt2n6S3kyp3zYvBRYWLsnGxJ2x5SHSuiLpXCiTR6UFyTTjVy88s
+        1hKdC3CPHGAte1A07jO93gAXV/aEUvkcf5NKCpA6Q7upbNSXIkrZ23OyPjKMe+A7r3QFnq3Gi8yY6RlG
+        2gaKfOY6j24/g5kNlr1GCxOfIuibgW1nZTCSdSKuV/fAaTuZb6y4OYyGHLbOG5ZDUgUzEq/ZdVGwTJbw
+        SHAzL/lgGm8cN5mKqWBcR8W3xyGs9T1w37BE4OZcFxb4ZL4GqWUdK1xHpbfHbSE831sw2HzkjTo3TmGe
+        scQk5aOZQVgi8Nvhlj1lO7ie9ppSwA1zft59G0+YILAFHiOHe4GZQUR4KUPQmCkQ3957YJAQldyFtrJ3
+        4MpXqyKTaEP8Hozv2o16s+iZMY5CtdJtpg4kyiBc1qNqCdcEY502bkJUgYkDUYYhDrfSuZ3LWIbzPoPx
+        5fgF/I4t9GsEVr5IQLoquizm6Ej/H2Gsnzble4W8jj4bhmEYhmEYhmE0zrlz/wGY3BZvLZHUPAAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
+  <metadata name="TINHTRANG.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="tmrSlide.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 3</value>
+  </metadata>
+  <metadata name="dataGridViewCheckBoxColumn1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="tmrSlide2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>104, 3</value>
+  </metadata>
+  <data name="pnBackground.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAATVSURBVDhPBcHRc9IIAsDhzNzDzvjgTB8617tjl11Z0aK0
+        0KYNEAgQCBAIEAgkECCQAi0tKhYVxW61rq7u3s7d7X/8u+8T/q4tCaiX/KRcEJbnPJWmxMUJpzEPOTok
+        v+9SCveohWzMoEU30GKw12SyW2e+U+PqfoWX90q8+a7I+7+pCHv6Fd9rCx6o5zxSZkTlM46kMZI4Ih0b
+        oEb7lPcdjHCXVqiNHTQZBhr4ewbnu1WWO2Wu72ts7hW4+S6P8A/jkh/0C37W5uyrUw4Un2PZIykNUUSX
+        QqxHJWpTj3Swwi16oSajYJ2zQI3Fns7z3RLrnSJv76vc3ssh/NNcEDTOeajPiGhnHKoTRGVESh6QlfoU
+        RQc91qURtehETPrhBl7IYBqschmo8GJP49VugXc7eT7czyL8y7rgR3NO2JjyRPeJaWNO1CGy4pKTe2iS
+        TVXs0Iy36UabuJE643CNWUjnKlhmFSjyek9lu5vj446C8L1zzgNrxiPzjKfGhCPdQ9IGpNU+ecWhLHcx
+        JIuW2MKONxhEDfxIlfNwhWWoxMtggU0gz81elrvdDMIP7pyQM+Wx5RM1xxwbIxK6S0broao2FaVDXW7T
+        Tpg4Yp1hvMZZVOciUuZZWOM6pPI2mOOXgMKnvTRC0Jvxs3vGvjPhwPIQzSFJo4+iOxS0Lrpq0VBaWHKT
+        XsJgJFaZxissoiWeR4qsw3nehbLcBjP8GpARfvSnPPR8Iu6YQ2fEiTUgZfbIGjZFvUNVa9NUTTrZBn25
+        hpfQmYllLuMaL6IFXkVybMMKH0JpPgdTCD/Nzwj7E556HnF3yKnjIlsOebNLybCo6S1MrUlXrTPIVpnI
+        FeaJEldikZdxlTfRLO8jGT6GZX4LJREeLHwezcdE/RFH3gDJ7ZN2bFSrQ9lsYxgmLb2BXTIYqjp+tsy5
+        rLFMFLgW82ziCjfRNHeRFF/DCYTQcsLjhcfBbMCx3ycxcsi4XQq2RcVqUW82aBsGjl5lpFU4U0tcKAWe
+        yXnWUpa3YoZfYjKfokm+7Z8iPFyNiSxHHC5cxFmPlG+THXUoum1026Rp1ek0a/QNHU8vM9U0LlWVF0qO
+        V7LCOynNBzHF51iC36MnCOG1x5PVkNiyz8nCQZ51yfkW2qhF1W1i2gZdq4prVhgbJWZ6kSstz0rN8lrJ
+        sJVlPkpJvogSf8REhEebEU/XA+KrHqdLm/SiQ37WpuSb1EYNWm4N29YZWGUmpsbcKLDUc7zUFN6oad4r
+        Ke7kBL9Jp/xbPEZ4vB0S3bgcrR2kVZfM0kJdtCjPmhh+nfaoiuNWGDolfKvIuanyzMhyrWfYaDI3apJP
+        isRX+YQ/pSOE/dsBB9s+4sYmue6grNoUlib6okFjZmD5Or1RmZGrMXUKLKw8z02FtZHmnZ7iVkvwq3rK
+        N0XkP3IcIXLncnjb42TbJbWxyK5bFFdNqss6zUWNzqxC3y/heUVmrsqlk+OFleGVKbM1knzQJT5rJ/yu
+        HvNfJYbw5Euf2J3D6W0HedsmtzHR1g1qKwNzWaW7KOPONMZ+gbmX58rNsnLSvLZSvDcTfDRO+aKL/KEd
+        8T/1ECH6rcfRFxvpziJ920LdNilv6hjrGq2VjrMsMVwU8ecq536Opadw7cpsnCQ3lsSdecJX45g/9Th/
+        aQf8H6Yi9RR8h0icAAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>25</value>
   </metadata>
