--- a/QuanLyKhoHang/GiaoDien/fmNhaCC.resx
+++ b/QuanLyKhoHang/GiaoDien/fmNhaCC.resx
@@ -173,19 +173,16 @@
   <metadata name="QGIA.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="ID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="TEN.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="DIACHI.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="SODT.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="QGIA.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
+  <data name="bunifuGradientPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFbSURBVChTBcHbb9JQAMDh8+bb3ogxEjOtt9Ub1Ukr4oEB
+        B1Z7GKztGjiM4REJ3Rat2xQvETVRY/yrf36fuKxOuS6X3PfnVCtH7GwZIifjoLzPq1Kfk41dPl7qIK7o
+        Y26qBQ+l5Zl/SLsyou+mjJwBr8sRb0tdPm20EFeTJbf1nIqa8VwalJ8x8GKM2+eNE1KUO3wpNRHXzIK7
+        ieWJnvJCjdiVKXEw5NCLWLo9zpwW38oSsWnnuGbG02RCQ2e8VDFpY4+jIOTYU1y4Tb47dcSN3PLATvHN
+        mFaSovWQrKuxjR6nQZuVJ/np1hC3ihmPckPNZnRMzCDpM9Yhc6V4J5t89uv8qgSIO6spXjGinqd07ZB9
+        EzFJeix0m/dK8lXW+ONXEVvrCdurDFnEhPkeiQ2ZGkWe7HCu66xVwF+5jbj3e0x1ndJcDYkKzUHeY2bb
+        nJgGH5IaP3SVf+ox/wELJLyjtxFKtAAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
